# casebook

./: .gitignore  CHANGES.md  README.md  pyproject.toml
.agents/skills/casebook-test-cases/: SKILL.md
casebook/: __init__.py  app.py  cli.py  editor.py  exporter.py  initializer.py  marks.py  renumber.py  report.py  runs.py  scanner.py  watcher.py
casebook/project_template/: AGENTS.md
casebook/project_template/.agents/skills/casebook-test-cases/: SKILL.md
casebook/project_template/.agents/skills/casebook-test-process-record/: SKILL.md
casebook/project_template/.agents/skills/casebook-test-process-record/agents/: openai.yaml
casebook/project_template/docs/templates/: l2-test-process-record.md
casebook/project_template/releases/example/: login.yaml
casebook/project_template/schema/: test-case-schema.json
casebook/static/: app.css  app.js
casebook/templates/: index.html
docs/: SKILL.md  casebook-instructions.md  test-case-format.md  thinking.md
docs/requirements/: login.md
releases/function-v1/: webhook.yaml
tests/: test_core.py
