[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casebook"
version = "0.6.0"
description = "A local browser and editor for YAML test cases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.1.3",
  "loguru>=0.7.2",
  "ruamel.yaml>=0.18.6",
  "typer>=0.12.0",
  "watchdog>=4.0.0",
]

[project.scripts]
casebook = "casebook.cli:main"

[tool.setuptools]
packages = ["casebook"]

[tool.setuptools.package-data]
casebook = [
  "templates/*.html",
  "static/*.svg",
  "static/*.css",
  "static/*.js",
  "project_template/AGENTS.md",
  "project_template/.agents/skills/casebook-test-cases/SKILL.md",
  "project_template/.agents/skills/casebook-test-process-record/SKILL.md",
  "project_template/.agents/skills/casebook-test-process-record/agents/openai.yaml",
  "project_template/.vscode/settings.json",
  "project_template/docs/requirements/login.md",
  "project_template/docs/templates/l2-test-process-record.md",
  "project_template/releases/example/login.yaml",
  "project_template/schema/test-case-schema.json",
]
